# Jeu-du-pendu-

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
_build/html/: .buildinfo  classes.html  fonctions.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/.doctrees/: classes.doctree  environment.pickle  fonctions.doctree  index.doctree  modules.doctree
_build/html/_modules/: index.html  jeu_du_pendu.html
_build/html/_sources/: index.rst.txt
doc/: classes.rst  fonctions.rst  index.rst  modules.rst
source/: conf.py  index.rst  modules.rst
src/: jeu_du_pendu.py
tests/: test_jeu_du_pendu.py
